--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MY</title>
+    <title>Una carta para una personita muy especial</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="normalize.css">
     <!-- Agregar el favicon -->
     <link rel="icon" href="img/icono.png" type="image/x-icon">
+    <!--Google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playwrite+VN:wght@100..400&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -18,9 +22,26 @@
             <div class="lapel_static" id="deg">
             </div>
             <div class="mensaje">
-                    <p>¡Hola! Este es el mensaje dentro de la carta. 🎉</p>
+                    <p style="user-select: none;">
+                        Es increíble cómo todo me recuerda a vos, como si el universo me hiciera extrañarte a propósito. Cada vez que voy al gimnasio y veo a alguien vestido como vos, me ilusiono pensando que te volvería a ver. Siento el olor a pucho mezclado con perfume y recuerdo los besos que me dabas cuando me alcanzabas a casa. El otro día se me salió una pestaña, y me acordé de cómo me pedías que pidiera un deseo cada vez que eso pasaba. Recuerdo nuestros últimos picos, esos abrazos que me desconectaban del mundo, y me pone triste imaginar que quizás nunca más en mi vida vuelva a sentir esas cosas que me hacían sentir en casa.
+
+                        Recuerdo cuando nos conocimos, éramos dos niños adolescentes jugando a ser grandes. Quizás ambos éramos lo suficientemente maduros en aquel entonces, o al menos eso creíamos. Yo era una persona torturada por la vida, sin ganas de conocer a nadie y negado a todo, no quería saber nada de amor ni de relaciones, hasta que llegaste vos. Con tu hermoso perfume que llenaba de olor el aula y a mi me llenaba el alma, estaba a tres bancos de distancia y de igual forma lo olía como si te tuviera al lado, un olor característico tuyo que de repente sentía estando en cualquier otro lugar. 
+
+                        Recuerdo cuando recién interactuamos las primeras veces, yo no quería decirte que me pareciste muy inteligente, ya sabía quién eras porque muchas veces respondías las preguntas de los profesores en las clases de Zoom con argumentos estupendos. De igual forma, hice como si no supiera quién eras. Con tan solo escucharte hablar unos minutos más, me di cuenta de la brillante persona que eras, sabía que eras diferente al resto, distinta completamente, con los pies sobre la tierra. Esa fue una de las cosas que más me enamoró de vos. Luego jugamos a las cartas, y jamás voy a olvidar cuando te sacabas el barbijo un poco y me sonreías. Qué hermoso recuerdo.
+
+                        Ese joven yo, seguro jamás se hubiera imaginado que hoy en día estaría hace 3 años con el amor de su vida. Hoy estoy orgulloso de decirte que sos la mejor novia que existe en el mundo, y agradezco todo lo que hiciste por mí. Sos literalmente la única e inigualable Martina Massa. Nombre que me pareció hermoso la primera vez que lo escuché. Recuerdo cómo te llamaron alguna vez, y nunca se borró de mi cabeza, Martina, Martina, Martina… era lo único que pensaba.
+
+                        Me enamoraste con cada uno de tus más mínimos gestos. Recuerdo cada mínimo detalle, cómo me rozabas, cómo me mirabas, cómo me tirabas indirectas. Recuerdo todo como si fuera ayer, porque en esa etapa de mi adolescencia conocí al amor de mi vida, a vos. Yo creo que cuando amas a alguien hay que intentar hasta lo último para que no se vaya, es una de las muchas cosas que me enseñaste… nunca podes obligar a la otra persona a sentir lo mismo que vos. Quizá nosotros nos amemos de maneras distintas o quizá yo era muy inmaduro como para entender algunas cosas que me planteabas, pero lo que sí sé es que estoy enamorado de vos y te amo. Cada minuto que compartimos es como estar en otro planeta, me siento único, me siento especial.
+
+                        No demostré amor de la forma que te hubiera gustado. A mí me hubiera gustado hacerte más regalos, darte más salidas, comprarte más cosas, y llevarte a donde quisieras sin usar el transporte público, porque para mí te mereces más que eso. En definitiva, me enseñaste a amar, me enseñaste a sentir, me enseñaste que por llorar no soy menos hombre, me enseñaste un millón de cosas. Eso fue lo más lindo, haberme hecho más sensible. Yo creo que también te habré enseñado a ser menos sensible o más dura, como quizá lo era yo. Y eso es lo más hermoso del amor, adaptarse al otro y poder llegar a algo juntos. Me voy a quedar con las ganas o voy a demostrarte que podemos juntos. Ya me cansé de decirte que “tengo paja”, “no tengo ganas”. Me voy a terminar de abrir con vos, voy a dejar de ser tu pareja de chat, y vas a conocerme como nadie más lo hizo. Vas a entender por qué no quería verte, y vas a entender que no era por “paja”, sino porque no quería que me vieras mal por mis propios problemas.
+
+                        Sos el amor de mi vida, y si no llegamos a nada juntos, me habré equivocado de vida, pero nunca de amor.
+
+                        Te amo con todo lo que soy, y siempre lo voy a hacer.   
+                    </p>
             </div>
             <div class="lapel"></div>
+            <p class="click">💘Dame click💘</p>
         </div>
     </div>
     <script src="script.js"></script>
